@@ -9,6 +9,9 @@ not yet  BJH  Release 10.65.00
               Recognize SIGPWR on systems that have it in messages
               about signal received.
 
+              pnmtops: Fix bug: wrong output with -ascii85.  Introduced in
+              10.63 (June 2013).
+
               pnmtops: Fix bug: program hangs if it inherits lots of open
               files.  Introduced in 10.56 (September 2011).
 
